--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,33 +6,41 @@
 :root{
     /* dark theme */
 
-    --light-text:#e0e1dd;
-    --light-blue:#778da9;
-    --dark-blue:#415a77;
+    --text-dark:#707070;
+    --identity-dark:#778da9;
+    --background-dark:#0d1b2a;
     --orange:#F4A261;
 
     /* light theme */
-    --background-light :#E9ECE6;
-    --text-light-theme :#545B5A;
-    --text2-light-theme :#0D1B2A;
-    --text3-light-theme: #264653;
-    --blue-light-theme: #C0DFD9;
+    --background-light :#e9ece6;
+    --identitty-light :#545b5a;
+    --text-light :#aab8b6;
 }
 
 body {
-    background-color: #0D1B2A;
-    /* background-color: var(--background-light); */
+    overflow-x: hidden;
+    background-color: var(--background-dark);
 }
 
-.container {
-    width: 90%;
-    margin: 0 auto;
+.mode_switch{
+    width: 2.5%;
+    height: 5vh;
+    border-radius: 50%;
+    background-color: var(--background-light);
+    position: absolute;
+    position: fixed;
+    margin: 0 0 0 99%;
+    /* transform: translatex(-5%), translatey(20vh); */
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
 }
 
 .nav-bar {
     display: flex;
     justify-content: flex-end;
     list-style: none;
+    position: fixed;
+    padding-left: 50%;
 }
 
 .nav-bar li {
@@ -40,12 +48,18 @@ body {
     font-family: candara;
     font-size: 15px;
     cursor: pointer;
-    color: var(--light-text);
-    /* color: var(--text2-light-theme); */
+    color: var(--text-dark);
+    transition: all 300ms ease-in-out;
 }
 
 .nav-bar li:hover {
     color: var(--orange);
+}
+
+.container {
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 25vh;
 }
 
 H1 {
@@ -54,8 +68,7 @@ H1 {
     font-size: 75px;
     text-align: right;
     letter-spacing: 15px;
-    color: var(--light-blue);
-    /* color: var(--text2-light-theme); */
+    color: var(--identity-dark);
 }
 
 h2{
@@ -64,8 +77,7 @@ h2{
     text-align: center;
     margin-top: 13vh;
     letter-spacing: 10px;
-    color: var(--light-text);
-    /* color: var(--text-light-theme) */
+    color: var(--text-dark);
 }
 
 hr{
@@ -82,8 +94,7 @@ p{
     margin:10vh 0;
     font-size: 25px;
     font-family: candara;
-    color: var(--light-blue);
-    /* color: var(--text3-light-theme); */
+    color: var(--text-dark);
     line-height: 35px;
 }
 
@@ -100,6 +111,6 @@ p{
 h3{
     text-align: center;
     margin: 5px;
-    color: var(--light-blue);
+    color: var(--identity-dark);
     font-family: candara;
 }
