--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -86,6 +86,8 @@ body {
 }
 
 h1 {
+    transform: translateX(-5%);
+    opacity: 0;
     margin-top: 5vh;
     font-family: forte;
     font-size: 75px;
@@ -100,6 +102,8 @@ h1 {
 }
 
 h2 {
+    transform: translateY(10vh);
+    opacity: 0;
     font-family: Pristina;
     font-size: 35px;
     text-align: center;
@@ -118,6 +122,8 @@ hr{
 
 .click_to_view {
     padding: 5px;
+    opacity: 0;
+    transform: translateX(-10%);
 }
 
 p{
