--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    font-family: candara;
 }
 
 :root{
@@ -147,18 +148,59 @@ p{
     align-items: center;
 }
 
-.guess_the_num{
-    transition: all 500ms ease-in-out;
-    font-size: 25px;
-    color: var(--background-dark);
+.gallary div, .gallary a {
+    height: 50vh;
+    transition: all 300ms ease-in-out;
     text-decoration: none;
-    background-image: url(./4.jfif);
 }
 
-.guess_the_num:hover {
-    background-image: none;
-    background-color: var(--background-light);
-    opacity: 0.5;
+.gallary div:hover{
+    border-radius: 25px;
+}
+
+.gallary a:hover {
+    border-radius: 25px;
+}
+
+.text{
+    opacity: 0;
+    background-color: black;
+    color: var(--text-dark);
+    font-size: 50px;
+    text-align: center;
+    padding-top: 15vh;
+}
+
+.text:hover {
+    opacity: 0.9;
+}
+
+.guess_the_number {
+    background-image: url(../images/guessMyNumber.PNG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+.roll_the_dice {
+    background-image: url(../images/rollTheDice.PNG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+.falcons {
+    background-image: url(../images/falcons.PNG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+.space {
+    background-image: url(../images/space.PNG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
 }
 
 h3 {
