--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,6 +43,126 @@ body {
     scroll-behavior: smooth;
 }
 
+/* PHONE SCREEN STYLE */
+
+@media only screen and (max-width: 428px) {
+
+.burger_and_drop_down {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+}
+    
+.Burger {
+    margin: 10px;
+    display: flex;
+    flex-direction: row-reverse;
+    column-gap: 32px;
+    margin-top: 21px;
+    margin-bottom: 19px;
+}
+
+.menu-btn {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    margin-right: 5px;
+}
+
+.menu-btn_burger {
+    width: 40px;
+    height: 6px;
+    background-color: black;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+    transition: all 0.5s ease-in-out;
+    border-radius: 5px;
+}
+
+.menu-btn_burger::before,
+.menu-btn_burger::after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 6px;
+    background-color: black;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+    transition: all 0.5s ease-in-out;
+    border-radius: 5px;
+}
+
+.menu-btn_burger::before {
+    transform: translateY(-14px);
+}
+
+.menu-btn_burger::after {
+    transform: translateY(14px);
+}
+
+.menu-btn.open .menu-btn_burger {
+    transform: translateX(-50px);
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.menu-btn.open .menu-btn_burger::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.menu-btn.open .menu-btn_burger::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
+
+.drop_down_menu {
+    width: 50%;
+    height: 15vh;
+    display: flex;
+    margin-top: 10vh;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    transition: all 300ms ease-in-out;
+}
+
+.drop_down_menu li {
+    font-weight: 600;
+    margin-top: 20px;
+    text-decoration: none;
+    list-style: none;
+    color: var(--background-light);
+}
+
+.hidden_phone {
+    opacity: 0;
+}
+
+.never_show{
+    display: none;
+}
+
+.container{
+    padding-top: 75vh;
+}
+
+
+
+
+
+}
+
+/* PC SCREEN STYLE */
+
+@media only screen and (min-width: 428px) {
+    
+.hidden{
+    display: none;
+}
+
 .mode_switch{
     width: 2.5%;
     height: 5vh;
@@ -229,4 +349,6 @@ h3 a {
 
 .contact a img {
     width: 40px;
+}
+
 }
